# tyrell

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GLOSSARY.md  README.md  THIRD_PARTY.md
.github/workflows/: arm-cross.yml  ci.yml  lint.yml
cmake/: aarch64-elk.cmake
docs/: SPEC.md  choir-filter-constants.md  filter-bank-research.md  tod-intrinsic-detuning.md
docs/superpowers/plans/: 2026-05-04-phase-0-implementation.md  2026-05-04-phase-1-skeleton-engine.md  2026-05-05-phase-2-tod-architecture.md  2026-05-05-phase-3-choir-implementation.md  2026-05-06-phase-4-ensemble.md  2026-05-06-phase-6-elk-deployment.md
docs/superpowers/specs/: 2026-05-04-phase-0-design.md  2026-05-05-phase-3-choir-design.md  2026-05-06-phase-4-ensemble-design.md
domain/: CMakeLists.txt
domain/include/vp330/engine/: MidiEvent.h  SynthesisEngine.h
domain/include/vp330/ensemble/: BbdLine.h  Ensemble.h  EnsembleConstants.h
domain/include/vp330/keyboard/: MkIIKeyboard.h
domain/include/vp330/keygate/: KeyGate.h
domain/include/vp330/modulation/: Lfo.h  Vibrato.h
domain/include/vp330/note/: MidiNote.h
domain/include/vp330/ports/: AudioSink.h  Clock.h  MidiSource.h
domain/include/vp330/section/: BpCascade.h  ChoirCompander.h  ChoirConstants.h  ChoirFilterBank.h  ChoirSection.h  ChoirSwitch.h
domain/include/vp330/tod/: MkIIConstants.h  OctaveDivider.h  TopOctaveDivider.h
domain/include/vp330/values/: Hertz.h  Pitch.h
domain/src/: stub.cpp
domain/src/engine/: SynthesisEngine.cpp
domain/src/ensemble/: BbdLine.cpp  Ensemble.cpp
domain/src/keyboard/: MkIIKeyboard.cpp
domain/src/keygate/: KeyGate.cpp
domain/src/modulation/: Lfo.cpp  Vibrato.cpp
domain/src/section/: BpCascade.cpp  ChoirCompander.cpp  ChoirFilterBank.cpp  ChoirSection.cpp
domain/src/tod/: OctaveDivider.cpp  TopOctaveDivider.cpp
infrastructure/: CMakeLists.txt
infrastructure/cli/: CMakeLists.txt  SmfReader.cpp  SmfReader.h  render_main.cpp
infrastructure/elk/: README.md  deploy.sh  sushi-config.json
infrastructure/juce/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
infrastructure/juce/parameters/: ParameterIds.h
tests/: CMakeLists.txt
tests/characterization/: CMakeLists.txt
tests/characterization/ensemble/: BbdLineCharTest.cpp  EnsembleCharTest.cpp
tests/characterization/keygate/: KeyGateEnvelopeTest.cpp
tests/characterization/modulation/: VibratoCharTest.cpp
tests/characterization/section/: BpCascadeCharTest.cpp  ChoirCompanderCharTest.cpp  ChoirFilterBankCharTest.cpp  ChoirSectionCharTest.cpp
tests/golden/: CMakeLists.txt  golden_test.cpp
tests/golden/fixtures/: silence-1s.mid  single-c4-1s.mid
tests/golden/helpers/: render.cpp  render.h  wav_io.cpp  wav_io.h
tests/unit/: CMakeLists.txt
tests/unit/cli/: SmfReaderTest.cpp
tests/unit/engine/: MidiEventTest.cpp  SynthesisEngineTest.cpp
tests/unit/ensemble/: BbdLineTest.cpp  EnsembleTest.cpp
tests/unit/keyboard/: MkIIKeyboardTest.cpp  MkIIKeyboardTuningTest.cpp
tests/unit/keygate/: KeyGateTest.cpp
tests/unit/modulation/: LfoTest.cpp  VibratoTest.cpp
tests/unit/note/: MidiNoteTest.cpp
tests/unit/section/: BpCascadeTest.cpp  ChoirCompanderTest.cpp  ChoirFilterBankTest.cpp  ChoirSectionTest.cpp
tests/unit/tod/: OctaveDividerTest.cpp  TopOctaveDividerTest.cpp
tests/unit/values/: HertzTest.cpp  PitchTest.cpp
tools/: install-hooks.sh
tools/capture/: README.md  driver.py  make_chromatic_fixture.py  requirements.txt  sample-manifest.json  scaffold.py  schema.json  validate.py
tools/golden/: gen-silence-baseline.py  gen-silence-fixture.py  gen-single-c4-fixture.py
